# mandel

./: Cargo.toml
benches/: compare.rs
src/: lib.rs  main.rs  packed.rs  scalar.rs  slipstream.rs
