[package]
name = "mandel"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

[dependencies]
anyhow = "~1"
image = { version = "~0.23", default-features = false, features = ["ico"] }
rayon = "~1"

[dev-dependencies]
criterion = "~0.3"

[[bench]]
name = "compare"
harness = false
